Incrementando novos crimes 6 a 9 no index

--- a/index.html
+++ b/index.html
@@ -64,6 +64,22 @@
   <a href="crimes/crime5.html" class="card">
     <img src="imagens/crime5_pista1.png" alt="Crime 5">
   </a>
+  
+  <a href="crimes/crime6.html" class="card">
+    <img src="imagens/crime6_pista1.png" alt="Crime 5">
+  </a>
 
+  <a href="crimes/crime7.html" class="card">
+    <img src="imagens/crime7_pista1.png" alt="Crime 5">
+  </a>
+
+  <a href="crimes/crime8.html" class="card">
+    <img src="imagens/crime8_pista1.png" alt="Crime 5">
+  </a>
+
+  <a href="crimes/crime9.html" class="card">
+    <img src="imagens/crime9_pista1.png" alt="Crime 5">
+  </a>
 </body>
 </html>
+
